all things completed for hw5